[gd_scene load_steps=13 format=2]

[ext_resource path="res://_tests/test_lod_managment/LOD_managment_test.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://_tests/test_lod_2/LODMesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://_tests/test_lod_2/LODMesh.gd" type="Script" id=4]
[ext_resource path="res://_tests/test_lod_managment/LODMeshHB.tscn" type="PackedScene" id=5]
[ext_resource path="res://_tests/test_lod_managment/LODMesh.gd" type="Script" id=6]
[ext_resource path="res://scripts/TreeManager.gd" type="Script" id=7]
[ext_resource path="res://scripts/MeshTool.gd" type="Script" id=8]
[ext_resource path="res://scripts/TreeStats.gd" type="Script" id=9]
[ext_resource path="res://scripts/LODManager.gd" type="Script" id=10]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 50, 50 )

[sub_resource type="SpatialMaterial" id=2]
flags_world_triplanar = true
albedo_texture = ExtResource( 2 )
uv1_triplanar = true

[node name="LODTestingTree" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.430831, -0.810385, 0.397066, 0, 0.439995, 0.898, -0.902433, -0.386886, 0.189564, 0, 4.44676, 0 )
shadow_enabled = true

[node name="LODMesh" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )
count = 20

[node name="LODMesh2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.78204, 0 )
script = ExtResource( 6 )
step = 6
count = 20

[node name="TreeManager" type="Node" parent="."]
script = ExtResource( 7 )
lod_aspect_ratio = 100.0

[node name="MeshTool" type="Node" parent="."]
script = ExtResource( 8 )

[node name="TreeStats" type="Node" parent="."]
script = ExtResource( 9 )

[node name="LodManager" type="Node" parent="."]
script = ExtResource( 10 )
grid_step = 1.0
enabled = false
